syntax = "proto3";

option java_multiple_files = true;
package com.jarvis.grpc.service;
option java_package = "com.jarvis.grpc.service";

service CustomerService {
  rpc getCustomerInfo (CustomerInfoRequest) returns (CustomerInfoResponse);
}

message CustomerInfoRequest {
  string requestId = 1;
  string requestDateTime = 2;
  CustomerInfoRequestData data = 3;
}

message CustomerInfoRequestData {
  string mobileNumber = 1;
}

message CustomerInfoResponse {
  string requestId = 1;
  string requestDateTime = 2;
  CustomerInfoResponseData data = 3;
}

message CustomerInfoResponseData {
  string name = 1;
  string email = 2;
  string mobileNumber = 3;
  repeated Account accounts = 4;
}

message Account {
  string accountNumber = 1;
  string accountType = 2;
  string branchAddress = 3;
}
